--- a/src/package.json
+++ b/src/package.json
@@ -10,12 +10,22 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@mdi/font": "^4.7.95",
         "axios": "^0.19",
         "cross-env": "^5.1",
+        "deepmerge": "^4.2.2",
+        "fibers": "^4.0.2",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.13",
+        "material-design-icons-iconfont": "^5.0.1",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.15.2",
-        "sass-loader": "^7.1.0"
-    }
+        "sass": "^1.24.4",
+        "sass-loader": "^7.3.1",
+        "vue": "^2.6.11",
+        "vue-router": "^3.1.4",
+        "vue-template-compiler": "^2.6.11",
+        "vuetify": "^2.2.3",
+        "vuetify-loader": "^1.4.1"
+    },
+    "dependencies": {}
 }
