--- a/src/package.json
+++ b/src/package.json
@@ -12,20 +12,24 @@
     "devDependencies": {
         "@mdi/font": "^4.7.95",
         "axios": "^0.19",
+        "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
         "deepmerge": "^4.2.2",
         "fibers": "^4.0.2",
+        "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
         "lodash": "^4.17.13",
         "material-design-icons-iconfont": "^5.0.1",
+        "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.24.4",
-        "sass-loader": "^7.3.1",
-        "vue": "^2.6.11",
+        "sass": "^1.20.1",
+        "sass-loader": "7.*",
+        "vue": "^2.5.17",
         "vue-router": "^3.1.4",
-        "vue-template-compiler": "^2.6.11",
+        "vue-template-compiler": "^2.6.10",
         "vuetify": "^2.2.3",
-        "vuetify-loader": "^1.4.1"
+        "vuetify-loader": "^1.4.1",
+        "vuex": "^3.1.2"
     },
-    "dependencies": {}
+    "dependencies": []
 }
