--- a/src/package.json
+++ b/src/package.json
@@ -38,6 +38,7 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.24.4",
         "sass-loader": "^7.3.1",
+        "vee-validate": "^3.2.2",
         "vue": "^2.6.11",
         "vue-router": "^3.1.4",
         "vue-template-compiler": "^2.6.11",
