--- a/src/package.json
+++ b/src/package.json
@@ -7,12 +7,16 @@
         "watch-poll": "npm run watch -- --watch-poll",
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "test": "jest"
     },
     "devDependencies": {
         "@mdi/font": "^4.7.95",
+        "@vue/test-utils": "^1.0.0-beta.31",
         "axios": "^0.19",
+        "babel-core": "^6.26.3",
         "babel-eslint": "^10.0.3",
+        "babel-jest": "^25.1.0",
         "browser-sync": "^2.26.7",
         "browser-sync-webpack-plugin": "^2.0.1",
         "cross-env": "^5.1",
@@ -31,6 +35,8 @@
         "eslint-plugin-standard": "^4.0.1",
         "eslint-plugin-vue": "^6.1.2",
         "fibers": "^4.0.2",
+        "jest": "^25.1.0",
+        "jest-transform-stub": "^2.0.0",
         "laravel-mix": "^4.0.7",
         "laravel-mix-eslint": "^0.1.3",
         "lodash": "^4.17.13",
@@ -40,6 +46,7 @@
         "sass-loader": "^7.3.1",
         "vee-validate": "^3.2.2",
         "vue": "^2.6.11",
+        "vue-jest": "^3.0.5",
         "vue-router": "^3.1.4",
         "vue-template-compiler": "^2.6.11",
         "vuetify": "^2.2.3",
